# sensi

./: .gitignore  README.md  pyproject.toml  run.sh
.claude/: launch.json
app/: config.py  db.py  main.py  market_clock.py  scanner.py
app/analytics/: black_scholes.py  historical_vol.py  iv_rank.py  outcomes.py  signals.py
app/providers/: base.py  yfinance_provider.py
static/: app.js  index.html  style.css
